<ScrollView android:id="@+id/detailsScrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

   <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="2"
      android:useDefaultMargins="true">

      <TextView
         android:id="@+id/nameLabelTextView"
         style="@style/RecipeLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="0"
         android:text="@string/label_name"/>

      <TextView
         android:id="@+id/nameTextView"
         style="@style/RecipeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="0"/>

      <TextView
         android:id="@+id/categoryLabelTextView"
         style="@style/RecipeLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="2"
         android:text="@string/label_category"/>

      <TextView
         android:id="@+id/categoryTextView"
         style="@style/RecipeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="2"/>

      <TextView
         android:id="@+id/ingredientsLabelTextView"
         style="@style/RecipeLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="3"
         android:text="@string/label_list_of_ingredients"/>

      <TextView
         android:id="@+id/ingredientsTextView"
         style="@style/RecipeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="3"/>

      <TextView
         android:id="@+id/instructionsLabelTextView"
         style="@style/RecipeLabelTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="0"
         android:layout_row="4"
         android:text="@string/label_instructions"/>

      <TextView
         android:id="@+id/instructionsTextView"
         style="@style/RecipeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="4"/>
   </GridLayout>
</ScrollView>