<FrameLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent">

   <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText"
               android:hint="@string/hint_name_required"
               android:imeOptions="actionNext"
               android:inputType="textCapWords"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/categoryTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText3"
               android:hint="@string/hint_category"
               android:imeOptions="actionNext"
               android:inputType="textCapWords"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredientsTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText4"
               android:hint="@string/hint_list_of_ingredients"
               android:imeOptions="actionNext"
               android:inputType="textMultiLine|textLongMessage|textCapSentences"/>
         </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/instructionsTextInputLayout">

            <EditText
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:id="@+id/editText5"
               android:hint="@string/hint_instructions"
               android:imeOptions="actionDone"
               android:inputType="textMultiLine|textLongMessage|textCapSentences"/>
         </android.support.design.widget.TextInputLayout>

      </LinearLayout>
   </ScrollView>

   <android.support.design.widget.FloatingActionButton
      android:id="@+id/saveFloatingActionButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="top|end"
      android:layout_margin="@dimen/fab_margin"
      android:src="@drawable/ic_save_24dp"/>

</FrameLayout>
